5th commit : 전화걸기 인텐트 추가, 권한 문제로 실제 동작하진 않음

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="다이얼 예제 010-2234-5619"/>
+            android:text="입력 번호 다이얼 입력"/>
 
         <TextView
             android:layout_width="0dp"
@@ -36,5 +36,25 @@
             android:text="전화 걸기"/>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="입력한 번호로 전화 걸기"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+        <Button
+            android:id="@+id/callBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="전화 걸기"/>
+    </LinearLayout>
 
 </LinearLayout>
